crates/gpui_tea/tests/ui/duplicate_child_path.stderr
error: duplicate `path` attribute
  --> tests/ui/duplicate_child_path.rs:22:9
   |
22 |         path = "second",
   |         ^^^^
